--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home_funishing_page</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <nav>
+        <div class="navTop">
+            <div class="navTop1">
+                <img src="./images/logo.png" alt="">
+                <select name="" id="">
+                    <option value="">All Categories</option>
+                    <option value="">Wooden</option>
+                    <option value="">Linen</option>
+                    <option value="">Bedroom</option>
+                    <option value="">Kitchen</option>
+                </select>
+            </div>
+            <div class="navTop2">
+                <input type="search" placeholder="search...">
+                <img src="./images/magnifier.png" alt="">
+            </div>
+            <div class="navTop3">
+                <h2>0 800 456 80 80</h2>
+                <h4>Support 24/7</h4>
+            </div>
+            <div class="navTop4">
+                <img src="./images/user.png" alt="">
+                <img src="./images/heart.png" alt="">
+                <img src="./images/shoppingCart.png" alt="">
+            </div>
+        </div>
+        <div class="navBottom">
+            <div class="navBottom1">
+              <img src="./images/unordered-list.png" alt="">
+              <h2>Select By Categories</h2>
+            </div>
+            <div class="navBottom2">6</div>
+        </div>
+      </nav>
+    </div>
+  </body>
 </html>
