--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 </select>
             </div>
             <div class="navTop2">
-                <input type="search" placeholder="search...">
-                <img src="./images/magnifier.png" alt="">
-            </div>
+                    <input type="search" placeholder="Search . . . ">
+                    <img src="./images/magnifier.png" alt="">
+                </div>
             <div class="navTop3">
-                <h2>0 800 456 80 80</h2>
-                <h4>Support 24/7</h4>
+                <p class="navTop3-number">0 800 456 80 80</p>
+                <p class="navTop3-text">Support 24/7</p>
             </div>
             <div class="navTop4">
                 <img src="./images/user.png" alt="">
@@ -36,12 +36,21 @@
         </div>
         <div class="navBottom">
             <div class="navBottom1">
-              <img src="./images/unordered-list.png" alt="">
-              <h2>Select By Categories</h2>
+                <img src="./images/unordered-list.png" alt="">
+                <p>Select by Category</p>
             </div>
-            <div class="navBottom2">6</div>
+
+            <ul class="navBottom2">
+                <li>Wooden</li>
+                <li>Linen</li>
+                <li>Linen</li>
+                <li>Linen</li>
+                <li>Linen</li>
+            </ul>
         </div>
       </nav>
     </div>
   </body>
 </html>
+
+
