--- a/index.html
+++ b/index.html
@@ -49,6 +49,53 @@
             </ul>
         </div>
       </nav>
+
+      <header>
+            <div class="header1">
+                <div class="header1-text">
+                    <p>Furniture essentials to a functional home design</p>
+                </div>
+
+                <div class="sofa">
+                    <img src="./images/sofa.png" alt="">
+                </div>
+
+            </div>
+
+            <div class="header2">
+                <p class="header2-text">
+                    Why is lighting is important in design
+                </p>
+                <img src="./images/armchair.png" alt="">
+            </div>
+        </header>
+
+      <section class="main">
+            <div class="mainCategory">
+                <p>Browse by Cathegory</p>
+
+                <div class="cathegories">
+                    <div class="cathegory">
+                        <p>Living Room</p>
+                        <img src="./images/living-room.jpg" alt="">
+                    </div>
+                    <div class="cathegory">
+                        <p>Kitchen</p>
+                        <img src="./images/kitchen.jpg" alt="">
+                    </div>
+                    <div class="cathegory">
+                        <p>Bedroom</p>
+                        <img src="./images/bedroom.jpg" alt="">
+                    </div>
+                    <div class="cathegory">
+                        <p>Accessories</p>
+                        <img src="./images/accesories.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </div>
   </body>
 </html>
