--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <section class="main">
             <div class="mainCategory">
-                <p>Browse by Cathegory</p>
+                <p>Browse by Category</p>
 
                 <div class="cathegories">
                     <div class="cathegory">
@@ -90,6 +90,40 @@
                     <div class="cathegory">
                         <p>Accessories</p>
                         <img src="./images/accesories.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+      
+      <section class="productSection">
+            <div class="product-part">
+                <p>Browse by Product</p>
+
+                <div class="products">
+                    <div class="product">
+                        <img src="./images/bed.jpg" alt="">
+                        <p>Beds</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/linen.jpeg" alt="">
+                        <p>Linens</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/carpet.jpg" alt="">
+                        <p>Carpet & Rugs</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/shelfs.jpg" alt="">
+                        <p>Shelf & Bookcases</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/dining-table.jpg" alt="">
+                        <p>Dining Table</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/kids.jpg" alt="">
+                        <p>Kid Room</p>
                     </div>
                 </div>
             </div>
