--- a/index.html
+++ b/index.html
@@ -130,6 +130,30 @@
 
         </section>
 
+      <div class="contact">
+        <div class="contactLeft">
+                <p class="contactText1">Looking for expert guidance to design <span>your home?</span></p>
+                <p class="contactText2">Leave your information here and receive consultation with our interior design experts.</p>
+        </div>
+        <div class="contactRight">
+                <form action="" method="get">
+                    <div class="formElement">
+                        <label for="name">Full Name</label>
+                        <input type="text" name="name" id="name" required>
+                    </div>
+                    <div class="formElement">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" required>
+                    </div>
+                    <div class="formElement">
+                        <label for="phone">Number</label>
+                        <input type="text" name="phone" id="phone" required>
+                    </div>
+                    <button class="formButton">Send</button>
+                </form>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
