--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="product">
                         <img src="./images/kids.jpg" alt="">
-                        <p>Kid Room</p>
+                        <p>Kids Room</p>
                     </div>
                 </div>
             </div>
@@ -153,6 +153,18 @@
                 </form>
         </div>
       </div>
+
+      <footer>
+        <div class="footer">
+            <div class="footerLeft">
+            <p>©2024.All Rights Reserved by Fatih SENYIGIT</p>
+        </div>
+        <div class="footerRight">
+            <a href="">Privacy Policy</a>
+            <a href="">Terms of Service</a>
+        </div>
+        </div>
+      </footer>
 
     </div>
   </body>
